--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,15 @@ language: python
 python:
   - "3.4"
 
+env:
+  - CODECOV_TOKEN = "50dbf6a3-7111-42e2-8306-033badf6421d"
+
 install:
+  - pip install coverage codecov
   - pip install -r requirements.txt
   - pip install .
 
 script:
   python setup.py test
+  coverage run setup.py test
+  codecov
