--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ install:
   - pip install .
 
 script:
-  python setup.py test
-  coverage run setup.py test
-  codecov
+  - python setup.py test
+  - coverage run setup.py test
+  - codecov
